# cline

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
.github/workflows/: ci.yml
client/: AGENTS.md  Dockerfile  biome.json  bun.lockb  bunfig.toml  eslint.config.js  index.html  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/scripts/: generate-routes.mjs
client/src/: env.ts  main.tsx
client/src/api/: client.ts
client/src/auth/: AuthProvider.tsx  msal.ts
client/src/routes/: __root.tsx  index.tsx
client/src/styles/: globals.css
configs/: AGENTS.md  celery.yml  dagster.yaml  logging.yml  openai.yml  qdrant.yml  rag.yml  s3.yml  server.dev.yml  server.prod.yml  server.yml
configs/env/: .env.dev.example  .env.prod.example  README.md
configs/infra/grafana/: datasources.yml
configs/infra/loki/: loki-config.yml
configs/infra/nginx/: nginx.conf
configs/infra/nginx/conf.d/: api.conf
configs/infra/otel-collector/: otel-collector-config.yml
configs/infra/postgres/init/: 01-create-dagster-db.sh
configs/infra/prometheus/: prometheus.yml
configs/infra/promtail/: promtail-config.yml
configs/infra/tempo/: tempo.yml
server/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/app/: logging.py  main.py  observability.py  settings.py
server/app/api/: deps.py  router.py
server/app/api/v1/: health.py
server/app/db/: base.py
server/app/db/models/: __init__.py
server/app/middleware/: correlation.py  ratelimit.py
server/app/orchestration/: __init__.py  definitions.py  resources.py
server/app/orchestration/assets/: __init__.py  example.py
server/app/scripts/: dump_openapi.py
server/app/services/: embeddings.py  llm.py
server/app/storage/: __init__.py  s3.py
server/app/vectorstore/: qdrant.py
server/app/workers/: celery_app.py
server/tests/: conftest.py
server/tests/unit/: test_health.py
